--- a/apps/protoc-gen-go-grpc/manifest.json
+++ b/apps/protoc-gen-go-grpc/manifest.json
@@ -1,9 +1,12 @@
 {
     "name": "protoc-gen-go-grpc",
     "tags": {
-        "latest": "1.3.0"
+        "latest": "1.5.1"
     },
     "versions": {
+        "1.5.1": {
+            "go-install": "google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.5.1"
+        },
         "1.3.0": {
             "go-install": "google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0"
         },
