--- a/apps/protoc-gen-connect-go/manifest.json
+++ b/apps/protoc-gen-connect-go/manifest.json
@@ -1,12 +1,15 @@
 {
     "name": "protoc-gen-connect-go",
     "tags": {
-        "latest": "1.10.0"
+        "latest": "1.17.0"
     },
     "versions": {
+        "1.17.0": {
+              "go-install": "connectrpc.com/connect/cmd/protoc-gen-connect-go@v1.17.0"
+        },
         "1.10.0": {
             "go-install": "github.com/bufbuild/connect-go/cmd/protoc-gen-connect-go@v1.10.0"
         }
     },
-    "try-go-install": "github.com/bufbuild/connect-go/cmd/protoc-gen-connect-go"
+    "try-go-install": "connectrpc.com/connect/cmd/protoc-gen-connect-go"
 }
