--- a/apps/golangci-lint/manifest.json
+++ b/apps/golangci-lint/manifest.json
@@ -8,5 +8,11 @@
             "go-install": "github.com/golangci/golangci-lint/cmd/golangci-lint"
         }
     },
-    "try-go-install": "github.com/golangci/golangci-lint/cmd/golangci-lint"
+    "try-go-install": "github.com/golangci/golangci-lint/cmd/golangci-lint",
+    "try-dist-tar": {
+        "default": {
+            "url": "https://github.com/golangci/golangci-lint/releases/download/v{{ .semver }}/golangci-lint-{{ .semver }}-{{ .os }}-{{ .arch }}.tar.gz",
+            "bin": "golangci-lint-{{ .semver }}-{{ .os }}-{{ .arch }}/golangci-lint"
+        }
+    }
 }
