--- a/apps/golangci-lint/manifest.json
+++ b/apps/golangci-lint/manifest.json
@@ -1,14 +1,23 @@
 {
     "name": "golangci-lint",
     "tags": {
-        "latest": "1.54.2"
+        "latest": "2.0.2"
     },
     "versions": {
         "1.54.2": {
             "go-install": "github.com/golangci/golangci-lint/cmd/golangci-lint"
+        },
+        "1.64.8": {
+            "go-install": "github.com/golangci/golangci-lint/cmd/golangci-lint"
+        },
+        "2.0.0": {
+            "go-install": "github.com/golangci/golangci-lint/v2/cmd/golangci-lint"
+        },
+        "2.0.2": {
+            "go-install": "github.com/golangci/golangci-lint/v2/cmd/golangci-lint"
         }
     },
-    "try-go-install": "github.com/golangci/golangci-lint/cmd/golangci-lint",
+    "try-go-install": "github.com/golangci/golangci-lint/v2/cmd/golangci-lint",
     "try-dist-tar": {
         "default": {
             "url": "https://github.com/golangci/golangci-lint/releases/download/v{{ .semver }}/golangci-lint-{{ .semver }}-{{ .os }}-{{ .arch }}.tar.gz",
